--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "devDependencies": {
     "cordova-android": "^14.0.1",
     "cordova-browser": "^7.0.0",
-    "cordova-plugin-contacts": "^3.0.1"
+    "cordova-plugin-contacts": "^3.0.1",
+    "cordova-plugin-permissions": "^0.0.1-security"
   },
   "cordova": {
     "platforms": [
-      "android",
-      "browser"
+      "browser",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-contacts": {}
